# fedit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  us-016-binary-distribution.yml
.ralph-tui/: config.toml  session-meta.json  session.json
cli_test_dir/: file2.txt
src/: api.rs  lib.rs  structured.rs
src/fedit/: __init__.py  _core.pyi  py.typed
tasks/: prd-mvp-v2.json  prd-mvp.json  prd-untitled-feature.md
